@@ -1,3 +1,8 @@
+2009-11-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tests/winDialog.test: Backported fix for running dialog tests
+	* win/tkWinTest.c:      on non-English locales [Bug 2307837]
+
 2009-11-12  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5.8 TAGGED FOR RELEASE ***
